// Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
// or more contributor license agreements. Licensed under the Elastic License;
// you may not use this file except in compliance with the Elastic License.

syntax = "proto3";

package common;

option cc_enable_arenas = true;
option go_package = "pkg/component/fake/common";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// Event message.
message Event {
  // Timestamp the event was generated.
  google.protobuf.Timestamp generated = 1;
  // Content of the event.
  google.protobuf.Struct content = 2;
}

// Event response message.
message EventResponse {
}

service FakeEventProtocol {
  // SendEvent sends an event over the protocol.
  rpc SendEvent(Event) returns (EventResponse);
}
